2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y:  Add  a  `%include'  directive  which  includes  files
	verbatim. Syntax is:
	%include filename
	without double quote or anything.
	
	This directive could be used anywhere.
	
	* parser.y (yyerror):   Enhance    verbosity   on   error  message
	accordingly.

	* monoburg.h: Add the info about included file storage.
	* monoburg.c: Update accordingly use of `inputfd'.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Add  a  `%namespace' directive   which makes  monoburg
	output  functions in  a  namespace. This  directive could  produce
	nested namespaces. Syntax is:
	%namespace namespace1_name
	%namespace namespace2_name
	without double quote or anything.
	
	This directive  can only be  used in the  `rule' part of  the burg
	file.

	The user is warned that  the code produced will only be compilable
	with a C++ compiler.
	
	* parser.y (yylex):  Remove  a warning  when comparing  a `sizeof'
	with an int.
	
	* monoburg.c,
	* monoburg.h: Add `%namespace' handling.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c:  Add   a  `--with-references'   option  which  makes
	monoburg to  produce `mono_burg_emit_*' functions  that takes tree
	as a `MBTREE&'.
	
	The user is warned that the code produced will only be compilable
	with a C++ compiler.
	
	* monoburg.c (emit_emmitter_func): Add fake use of arguments of 
	`emit' functions produced to avoid `unused parameter' warning when
	compiling output.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y:  Add an optional `;' at  the end of an  empty rule, in
	the style of yacc(1).

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Add a `--without-exported-symbols' option which
	makes monoburg avoid defining external symbols as much as
	possible.
	Remove the weaker `--without-debug-tables'.
