@@ -5,6 +5,7 @@
 ## ------------------------------------- 
 ## Project
 AC_INIT([MonoBURG], [1.0.1])
+AM_CONFIG_HEADER([config.h])
 
 ## -------------------------------------
 ## Setup autotools
